[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/5yearsoldfont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/ui/hand.png" type="Texture" id=2]
[ext_resource path="res://scripts/ChooseFinalDate.gd" type="Script" id=3]
[ext_resource path="res://fonts/Bromine.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/ui/bar.png" type="Texture" id=5]

[sub_resource type="StreamTexture" id=6]
flags = 4
load_path = "res://.import/paper_sheet.png-ca45b4a317a882e1a93a38b1700af221.stex"

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 4 )

[node name="ChooseDateUI" type="Node2D"]
position = Vector2( -120, -100 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 3 )

[node name="PaperTextureRect" type="TextureRect" parent="."]
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
texture = SubResource( 6 )

[node name="LetterTextLabel" type="Label" parent="PaperTextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 720.0
margin_top = 140.0
margin_right = -340.0
margin_bottom = -160.0
rect_rotation = 1.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -10
custom_fonts/font = SubResource( 3 )
text = "It's time... Mark your final
choice with an X

Coppo

Ember

Robbin 

Stoney

Vandal X
"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 176.776, 605 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -470.983
margin_top = -4.16864
margin_right = 434.017
margin_bottom = 75.8314
custom_colors/font_color = Color( 0.239216, 0.180392, 0.317647, 1 )
custom_fonts/font = SubResource( 7 )
text = "PRESS SPACE TO MARK"
align = 1
valign = 1

[node name="PointingHandSprite" type="Sprite" parent="."]
position = Vector2( 960, 390 )
texture = ExtResource( 2 )

[node name="FirstOptionPosition" type="Position2D" parent="."]
position = Vector2( 960, -60 )

[node name="SecondOptionPosition" type="Position2D" parent="."]
position = Vector2( 960, 55 )

[node name="ThirdOptionPosition" type="Position2D" parent="."]
position = Vector2( 960, 160 )

[node name="FourthOptionPosition" type="Position2D" parent="."]
position = Vector2( 960, 270 )

[node name="FifthOptionPosition" type="Position2D" parent="."]
position = Vector2( 960, 390 )
